Arreglando acceso a objeto